# StagVault

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/sources/: noto-emoji.yaml
configs/sources/: bootstrap-icons.yaml  boxicons.yaml  eva-icons.yaml  feather.yaml  fluent-emoji.yaml  heroicons.yaml  iconoir.yaml  ionicons.yaml  lucide.yaml  material-design.yaml  noto-emoji.yaml  octicons.yaml  openmoji.yaml  pexels.yaml  phosphor-icons.yaml  pixabay.yaml  remix-icon.yaml  simple-icons.yaml  tabler-icons.yaml  twemoji.yaml  unsplash.yaml
docs/: README.md  aliases.md  cli-modes.md  configuration.md  filtering.md  providers.md  source-hierarchy.md  sources.md  static-site.md  structure.md  testing.md  thumbnails.md
scripts/: add_metadata.py  build_static.sh  fetch_emoji_descriptions.py  init_metadata.py  lock_commits.py
stagvault/: __init__.py  cli.py  vault.py
stagvault/api/: __init__.py  routes.py
stagvault/models/: __init__.py  archive.py  config.py  git.py  media.py  metadata.py  provider.py  source.py  source_info.py
stagvault/providers/: README.md  __init__.py  base.py  cache.py  pexels.py  pixabay.py  registry.py  routes.py  unsplash.py
stagvault/search/: __init__.py  indexer.py  query.py
stagvault/sources/: __init__.py  api.py  archive.py  base.py  git.py
stagvault/static/: __init__.py  index_builder.py
stagvault/thumbnails/: __init__.py  cache.py  config.py  generator.py  (+2 more)
static_site/: app.js
tests/: conftest.py  test_providers.py  test_search_ranking.js  test_source_management.py  test_strip_html.js  test_thumbnail_colors.py
(+23 files in other folders)
